<resources>
    <string name="app_name">DoctorAppAppointment</string>
    <string name="book_an_online_doctor">Book An Online Doctor</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="gender">Gender:</string>
    <string name="email_address">Email Address</string>
    <string name="send">Send</string>
    <string name="show_information">Show Information</string>
    <string name="first_name">First name:</string>
    <string name="maphathe">Maphathe</string>
    <string name="mohale">Mohale</string>
    <string name="_20">20</string>
    <string name="last_name">Last name:</string>
    <string name="male">Male</string>
    <string name="date">Date:</string>
    <string name="_16_07_2021">16/07/2021</string>
    <string name="email">Email</string>
    <string name="maphathemohale6_gmail_com">maphathemohale6@gmail.com</string>
    <string name="age">Age:</string>
    <string name="show_data">Show Data</string>
    <string name="todo">TODO</string>
</resources>